--- a/test-output/old/Suite/methods.html
+++ b/test-output/old/Suite/methods.html
@@ -1,20 +1,10 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="d3a17d">  <td>21/04/25 21:54:18</td>   <td>0</td> <td>&nbsp;</td><td title="&gt;&gt;Executionflow.test4()[pri:0, instance:com.testng.Executionflow@3c5a99da]">&gt;&gt;test4</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@142666848</td>   <td></td> </tr>
-<tr bgcolor="d3a17d">  <td>21/04/25 21:54:18</td>   <td>32</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Executionflow.test1()[pri:0, instance:com.testng.Executionflow@3c5a99da]">&gt;&gt;test1</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@142666848</td>   <td></td> </tr>
-<tr bgcolor="d3a17d">  <td>21/04/25 21:54:18</td>   <td>32</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Executionflow.test2()[pri:0, instance:com.testng.Executionflow@3c5a99da]">&gt;&gt;test2</td> 
-<td>&nbsp;</td>  <td>main@142666848</td>   <td></td> </tr>
-<tr bgcolor="d3a17d">  <td>21/04/25 21:54:18</td>   <td>32</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Executionflow.test3()[pri:0, instance:com.testng.Executionflow@3c5a99da]">test3</td> 
-  <td>main@142666848</td>   <td></td> </tr>
-<tr bgcolor="d3a17d">  <td>21/04/25 21:54:18</td>   <td>47</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Executionflow.test5()[pri:0, instance:com.testng.Executionflow@3c5a99da]">&lt;&lt;test5</td> 
-<td>&nbsp;</td>  <td>main@142666848</td>   <td></td> </tr>
-<tr bgcolor="d3a17d">  <td>21/04/25 21:54:18</td>   <td>47</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Executionflow.test2()[pri:0, instance:com.testng.Executionflow@3c5a99da]">&gt;&gt;test2</td> 
-<td>&nbsp;</td>  <td>main@142666848</td>   <td></td> </tr>
-<tr bgcolor="d3a17d">  <td>21/04/25 21:54:18</td>   <td>47</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Executionflow.test6()[pri:0, instance:com.testng.Executionflow@3c5a99da]">test6</td> 
-  <td>main@142666848</td>   <td></td> </tr>
-<tr bgcolor="d3a17d">  <td>21/04/25 21:54:18</td>   <td>78</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Executionflow.test5()[pri:0, instance:com.testng.Executionflow@3c5a99da]">&lt;&lt;test5</td> 
-<td>&nbsp;</td>  <td>main@142666848</td>   <td></td> </tr>
+<tr bgcolor="febc6f">  <td>21/05/16 01:11:39</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Sample.test1(java.lang.String)[pri:0, instance:com.testng.Sample@1b40d5f0]">test1</td> 
+  <td>main@391447681</td>   <td></td> </tr>
+<tr bgcolor="febc6f">  <td>21/05/16 01:11:50</td>   <td>10493</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Sample.test1(java.lang.String)[pri:0, instance:com.testng.Sample@129a8472]">test1</td> 
+  <td>main@391447681</td>   <td></td> </tr>
+<tr bgcolor="febc6f">  <td>21/05/16 01:12:10</td>   <td>30584</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Sample.test1(java.lang.String)[pri:0, instance:com.testng.Sample@e580929]">test1</td> 
+  <td>main@391447681</td>   <td></td> </tr>
 </table>
