--- a/test-output/old/Default suite/methods-alphabetical.html
+++ b/test-output/old/Default suite/methods-alphabetical.html
@@ -1,24 +1,28 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="d3a17d">  <td>21/04/25 21:59:33</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Executionflow.test1()[pri:0, instance:com.testng.Executionflow@71c7db30]">&gt;&gt;test1</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1854778591</td>   <td></td> </tr>
-<tr bgcolor="d3a17d">  <td>21/04/25 21:59:33</td>   <td>53</td> <td>&nbsp;</td><td title="&lt;&lt;Executionflow.test10()[pri:0, instance:com.testng.Executionflow@71c7db30]">&lt;&lt;test10</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1854778591</td>   <td></td> </tr>
-<tr bgcolor="d3a17d">  <td>21/04/25 21:59:33</td>   <td>11</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Executionflow.test2()[pri:0, instance:com.testng.Executionflow@71c7db30]">&gt;&gt;test2</td> 
-<td>&nbsp;</td>  <td>main@1854778591</td>   <td></td> </tr>
-<tr bgcolor="d3a17d">  <td>21/04/25 21:59:33</td>   <td>40</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Executionflow.test2()[pri:0, instance:com.testng.Executionflow@71c7db30]">&gt;&gt;test2</td> 
-<td>&nbsp;</td>  <td>main@1854778591</td>   <td></td> </tr>
-<tr bgcolor="d3a17d">  <td>21/04/25 21:59:33</td>   <td>14</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Executionflow.test3()[pri:0, instance:com.testng.Executionflow@71c7db30]">test3</td> 
-  <td>main@1854778591</td>   <td></td> </tr>
-<tr bgcolor="d3a17d">  <td>21/04/25 21:59:33</td>   <td>-9</td> <td>&nbsp;</td><td title="&gt;&gt;Executionflow.test4()[pri:0, instance:com.testng.Executionflow@71c7db30]">&gt;&gt;test4</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1854778591</td>   <td></td> </tr>
-<tr bgcolor="d3a17d">  <td>21/04/25 21:59:33</td>   <td>26</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Executionflow.test5()[pri:0, instance:com.testng.Executionflow@71c7db30]">&lt;&lt;test5</td> 
-<td>&nbsp;</td>  <td>main@1854778591</td>   <td></td> </tr>
-<tr bgcolor="d3a17d">  <td>21/04/25 21:59:33</td>   <td>49</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Executionflow.test5()[pri:0, instance:com.testng.Executionflow@71c7db30]">&lt;&lt;test5</td> 
-<td>&nbsp;</td>  <td>main@1854778591</td>   <td></td> </tr>
-<tr bgcolor="d3a17d">  <td>21/04/25 21:59:33</td>   <td>41</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Executionflow.test6()[pri:0, instance:com.testng.Executionflow@71c7db30]">test6</td> 
-  <td>main@1854778591</td>   <td></td> </tr>
-<tr bgcolor="d3a17d">  <td>21/04/25 21:59:33</td>   <td>-31</td> <td title="&gt;&gt;Executionflow.test7()[pri:0, instance:com.testng.Executionflow@71c7db30]">&gt;&gt;test7</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1854778591</td>   <td></td> </tr>
+<tr bgcolor="d3a17d">  <td>21/04/27 01:02:20</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Executionflow.test1()[pri:0, instance:com.testng.Executionflow@11531931]">&gt;&gt;test1</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@191382150</td>   <td></td> </tr>
+<tr bgcolor="d3a17d">  <td>21/04/27 01:02:20</td>   <td>47</td> <td>&nbsp;</td><td title="&lt;&lt;Executionflow.test10()[pri:0, instance:com.testng.Executionflow@11531931]">&lt;&lt;test10</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@191382150</td>   <td></td> </tr>
+<tr bgcolor="d3a17d">  <td>21/04/27 01:02:20</td>   <td>15</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Executionflow.test2()[pri:0, instance:com.testng.Executionflow@11531931]">&gt;&gt;test2</td> 
+<td>&nbsp;</td>  <td>main@191382150</td>   <td></td> </tr>
+<tr bgcolor="d3a17d">  <td>21/04/27 01:02:20</td>   <td>31</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Executionflow.test2()[pri:0, instance:com.testng.Executionflow@11531931]">&gt;&gt;test2</td> 
+<td>&nbsp;</td>  <td>main@191382150</td>   <td></td> </tr>
+<tr bgcolor="d3a17d">  <td>21/04/27 01:02:20</td>   <td>15</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Executionflow.test3()[pri:0, instance:com.testng.Executionflow@11531931]">test3</td> 
+  <td>main@191382150</td>   <td></td> </tr>
+<tr bgcolor="d3a17d">  <td>21/04/27 01:02:20</td>   <td>47</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Executionflow.test32()[pri:0, instance:com.testng.Executionflow@11531931]">&lt;&lt;test32</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@191382150</td>   <td></td> </tr>
+<tr bgcolor="d3a17d">  <td>21/04/27 01:02:20</td>   <td>0</td> <td>&nbsp;</td><td title="&gt;&gt;Executionflow.test4()[pri:0, instance:com.testng.Executionflow@11531931]">&gt;&gt;test4</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@191382150</td>   <td></td> </tr>
+<tr bgcolor="d3a17d">  <td>21/04/27 01:02:20</td>   <td>31</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Executionflow.test5()[pri:0, instance:com.testng.Executionflow@11531931]">&lt;&lt;test5</td> 
+<td>&nbsp;</td>  <td>main@191382150</td>   <td></td> </tr>
+<tr bgcolor="d3a17d">  <td>21/04/27 01:02:20</td>   <td>47</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Executionflow.test5()[pri:0, instance:com.testng.Executionflow@11531931]">&lt;&lt;test5</td> 
+<td>&nbsp;</td>  <td>main@191382150</td>   <td></td> </tr>
+<tr bgcolor="d3a17d">  <td>21/04/27 01:02:20</td>   <td>31</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Executionflow.test6()[pri:0, instance:com.testng.Executionflow@11531931]">test6</td> 
+  <td>main@191382150</td>   <td></td> </tr>
+<tr bgcolor="d3a17d">  <td>21/04/27 01:02:20</td>   <td>140</td> <td title="&lt;&lt;Executionflow.test61()[pri:0, instance:com.testng.Executionflow@11531931]">&lt;&lt;test61</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@191382150</td>   <td></td> </tr>
+<tr bgcolor="d3a17d">  <td>21/04/27 01:02:20</td>   <td>-32</td> <td title="&gt;&gt;Executionflow.test7()[pri:0, instance:com.testng.Executionflow@11531931]">&gt;&gt;test7</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@191382150</td>   <td></td> </tr>
 </table>
